修改優惠券Email樣式

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Bonus/Bonus.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Bonus/Bonus.cshtml
@@ -57,7 +57,7 @@
             </button>
         </div>
     </div>
-
+    <img src=""
 
 
     <!---新增優惠券 modal-->
@@ -791,7 +791,7 @@
             $('#create-offer').val('');
             $('#create-usable').val('').prop('selected', ''); // 將選項重設為預設值
         }
-
+        
         // 點擊關閉按鈕時清空表單
         $('.create_btn').click(function () {
             clearFormInputs();
