改一下banner(還沒完成)

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
@@ -131,10 +131,12 @@
         @foreach (var banner in ViewBag.Banners)
         {
             <li class="text-center">
-                <img src="@banner.Link" alt="" style="object-fit:cover" />
+                <a href="/Index/Shop?categoryName=保健食品">
+                    <img src="@banner.Link" alt="" style="object-fit: cover" />
+                </a>
                 <div class="container">
                     <div class="row d-flex justify-content-center align-items-end mb-5">
-                        <div class="col-md-12 ">
+                        <div class="col-md-12">
                             <p><a class="btn hvr-hover" asp-controller="Index" asp-action="Shop">來去逛逛</a></p>
                         </div>
                     </div>
