--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Shared/CMS_Layout.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Shared/CMS_Layout.cshtml
@@ -118,7 +118,7 @@
             <li class="nav-item">
                 <a class="nav-link" asp-area="AdminCMS" asp-controller="Service" asp-action="Service">
                     <i class="fas fa-headset"></i>
-                    <span class="title">客訴回覆</span>
+                    <span class="title">客服回覆</span>
                 </a>
             </li>
 
